warehouse20/radarr/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: warehouse20
  labels:
    app: radarr
    component: frontend
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      targetPort: http
      port: 7878
      protocol: TCP
  selector:
    app: radarr

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    flux.weave.works/tag.fluxcloud: glob:v0.2.*
    flux.weave.works/automated: 'true'
  labels:
    app: radarr
    component: frontend
  name: radarr
  namespace: warehouse20
spec:
  serviceName: radarr
  selector:
    matchLabels:
      app: radarr
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: radarr
        component: frontend
    spec:
      automountServiceAccountToken: false
      containers:
      - name: radarr
        image: quay.io/nicolerenee/radarr:v0.2.0.1293
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        securityContext:
          runAsUser: 1024
          runAsGroup: 100
        volumeMounts:
        - mountPath: /config
          name: data
          subPath: data
        - mountPath: /data/
          name: media
        - mountPath: /mnt/media01/
          name: media
      volumes:
      - name: data
        iscsi:
          iqn: iqn.2019-03.com.ntwk20:vault01.radarr.cdab998267
          targetPortal: 172.20.1.5
          lun: 1
          chapAuthSession: true
          secretRef:
            name: vault01-chap-secret
      - name: media
        persistentVolumeClaim:
          claimName: media
